--- a/index.html
+++ b/index.html
@@ -1,35 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Viva Bem</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <header class="header">
-    <div class="header__wrap">
-      <div class="header__logo">
-        <img src="images/logo-viva-bem.png" alt="Viva Bem Logo">
-      </div>
-      <nav class="header__nav">
-        <ul class="header__nav-list">
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Prevenção Masculina</a></li>
-          <li class="header__nav-item"><a href="#" class="header__nav-link">Prevenção Feminina</a></li>
-        </ul>
-      </nav>
-    </div>
 
-    <div class="header__banner">
-      <div class="banner__content">
-        <h1 class="banner__title">Cuidar da saúde é um ato de amor</h1>
-        <p class="banner__subtitle">Confira os principais exames de prevenção por faixa etária.</p>
-        <div class="banner__buttons">
-          <a href="#agenda" class="banner__button banner__button--primary">Ver Agenda por Idade</a>
-          <a href="#saiba-mais" class="banner__button banner__button--secondary">Saiba Mais</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Viva Bem</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="header__wrap">
+            <div class="header__logo">
+                <img src="images/logo-viva-bem.png" alt="Viva Bem Logo">
+            </div>
+            <nav class="header__nav">
+                <ul class="header__nav-list">
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">Prevenção Masculina</a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">Prevenção Feminina</a></li>
+                </ul>
+            </nav>
         </div>
-      </div>
-    </div>
-  </header>
+
+        <div class="header__banner">
+            <div class="banner__content">
+                <h1 class="banner__title">Cuidar da saúde é um ato de amor</h1>
+                <p class="banner__subtitle">Confira os principais exames de prevenção por faixa etária.</p>
+                <div class="banner__buttons">
+                    <a href="#agenda" class="banner__button banner__button--primary">Ver Agenda por Idade</a>
+                    <a href="#saiba-mais" class="banner__button banner__button--secondary">Saiba Mais</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="exams">
+        <div class="exams__content">
+            <h2 class="exams__title">A Importância dos Exames de Rotina</h2>
+            <p class="exams__text">Os exames preventivos são fundamentais para detectar doenças em estágios iniciais,
+                quando o tratamento é mais eficaz e menos invasivo. Manter uma rotina de check-ups regulares pode salvar
+                vidas e garantir uma melhor qualidade de vida para você e sua família.
+            </p>
+            <div class="exams__cards">
+                <div class="exams__card">
+                    <img src="./images/icons/check.png" alt="Icone de Check" class="exams__card-icon">
+                    <h3 class="exams__card-title">Detecção Precoce</h3>
+                    <p class="exams__card-text">Identifique problemas antes que se tornem graves</p>
+                </div>
+
+                <div class="exams__card">
+                    <img src="./images/icons/apoioFamilia.png" alt="Icone de Familia" class="exams__card-icon">
+                    <h3 class="exams__card-title">Cuidado Familiar</h3>
+                    <p class="exams__card-text">Proteja toda a família com exames regulares</p>
+                </div>
+
+                <div class="exams__card">
+                    <img src="./images/icons/coração.png" alt="Icone de coração" class="exams__card-icon">
+                    <h3 class="exams__card-title">Qualidade de Vida</h3>
+                    <p class="exams__card-text">Viva mais e melhor com prevenção adequada</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
