--- a/index.html
+++ b/index.html
@@ -62,6 +62,77 @@
             </div>
         </div>
     </section>
+
+    <section class="female">
+        <div class="female__content">
+            <h2 class="female__title">Prevenção Feminina</h2>
+
+            <div class="female__cards">
+                <div class="female__card">
+                    <img src="./images/female/imagemVacina.png" alt="" class="female__icon">
+                    <h3 class="female__card-title">A partir dos 15 anos</h3>
+                    <ul class="female__list">
+                        <li>Vacinação em dia (HPV, tétano, hepatite B, influenza, covid)</li>
+                        <li>Consulta ginecológica inicial (orientação sobre saúde menstrual, contracepção e prevenção de
+                            ISTs)</li>
+                    </ul>
+                </div>
+
+                <div class="female__card">
+                    <img src="./images/female/imagemExameDeSangue.png" alt="" class="female__icon">
+                    <h3 class="female__card-title">A partir dos 20 anos</h3>
+                    <ul class="female__list">
+                        <li>Exames de sangue e urina anuais (hemograma, glicose, colesterol, função renal e hepática)
+                        </li>
+                        <li>Check-up odontológico e oftalmológico</li>
+                        <li>Exame dermatológico (rastreamento de câncer de pele)</li>
+                    </ul>
+                </div>
+
+                <div class="female__card">
+                    <img src="./images/female/imagemExameHPV.png" alt="" class="female__icon">
+                    <h3 class="female__card-title">A partir dos 25 anos</h3>
+                    <ul class="female__list">
+                        <li>Papanicolau (preventivo) – a cada 3 anos se não houver alterações</li>
+                        <li>Rastreio do HPV se indicado</li>
+                    </ul>
+                </div>
+
+                <div class="female__card">
+                    <img src="./images/female/imagemExameCardiovascular.png" alt="" class="female__icon">
+                    <h3 class="female__card-title">A partir dos 30 anos</h3>
+                    <ul class="female__list">
+                        <li>Check-up anual com clínico geral</li>
+                        <li>Exames de sangue mais completos</li>
+                        <li>Aferição da pressão arterial e glicemia</li>
+                        <li>Exames cardiovasculares iniciais se houver histórico familiar ou fatores de risco</li>
+                    </ul>
+                </div>
+
+                <div class="female__card">
+                    <img src="./images/female/imagemMamografia.png" alt="" class="female__icon">
+                    <h3 class="female__card-title">A partir dos 40 anos</h3>
+                    <ul class="female__list">
+                        <li>Mamografia anual ou bianual (dependendo do histórico familiar)</li>
+                        <li>Exames cardiovasculares mais detalhados (eletrocardiograma, teste ergométrico,
+                            ecocardiograma se indicado)</li>
+                    </ul>
+                </div>
+
+                <div class="female__card">
+                    <img src="./images/female/imagemColonoscopia.png" alt="" class="female__icon">
+                    <h3 class="female__card-title">A partir dos 50 anos</h3>
+                    <ul class="female__list">
+                        <li>Colonoscopia (a cada 5 anos, ou antes se houver risco)</li>
+                        <li>Continuidade dos exames laboratoriais e ginecológicos</li>
+                        <li>Monitoramento para osteoporose (densitometria óssea pode ser indicada)</li>
+                    </ul>
+                </div>
+
+
+            </div>
+
+    </section>
 </body>
 
 </html>
