feat(male): add male section, styles and images

--- a/index.html
+++ b/index.html
@@ -128,11 +128,70 @@
                         <li>Monitoramento para osteoporose (densitometria óssea pode ser indicada)</li>
                     </ul>
                 </div>
-
-
             </div>
-
     </section>
+
+
+
+    <section class="male">
+        <div class="male__content">
+            <h2 class="male__title">Prevenção Masculina</h2>
+
+            <div class="male__cards">
+                <div class="male__card">
+                    <img src="./images/male/imagemVacina.png" alt="" class="male__icon">
+                    <h3 class="male__card-title">A partir dos 15 anos</h3>
+                    <ul class="male__list">
+                        <li>Autoexame testicular (mensal, após o banho)</li>
+                        <li>Atenção a alterações: tamanho, dor, nódulos</li>
+                        <li>Vacinação em dia (hepatite B, tétano, HPV, influenza, covid)</li>
+                    </ul>
+                </div>
+
+                <div class="male__card">
+                    <img src="./images/male/imagemExameOftamo.png" alt="" class="male__icon">
+                    <h3 class="male__card-title">A partir dos 20 anos</h3>
+                    <ul class="male__list">
+                        <li>Exames de sangue e urina</li>
+                        <li>Avaliação odontológica e oftalmológica</li>
+                    </ul>
+                </div>
+
+                <div class="male__card">
+                    <img src="./images/male/imagemExameCardiovascular.png" alt="" class="male__icon">
+                    <h3 class="male__card-title">A partir dos 30 anos</h3>
+                    <ul class="male__list">
+                        <li>Check-up anual com clínico geral</li>
+                        <li>Exames de sangue mais completos</li>
+                        <li>Aferição da pressão arterial</li>
+                        <li>Glicemia de jejum </li>
+                        <li>Avaliação dermatológica</li>
+                        <li>Avaliação cardiovascular inicial</li>
+                    </ul>
+                </div>
+
+                <div class="male__card">
+                    <img src="./images/male/imagemExameDeSangue.png" alt="" class="male__icon">
+                    <h3 class="male__card-title">A partir dos 40 anos</h3>
+                    <ul class="male__list">
+                        <li>Exames cardiovasculares</li>
+                        <li>Exames de sangue e urina anuais continuam</li>
+                        <li>Se houver histórico familiar de câncer de cólon ou próstata, antecipar rastreamento</li>
+                    </ul>
+                </div>
+
+                <div class="male__card">
+                    <img src="./images/male/imagemConsulta.png" alt="" class="male__icon">
+                    <h3 class="male__card-title">A partir dos 50 anos</h3>
+                    <ul class="male__list">
+                        <li>Colonoscopia (a cada 5 anos)</li>
+                        <li>Exame de próstata (PSA + toque retal)</li>
+                        <li>Continuidade dos exames laboratoriais e cardiovasculares</li>
+                    </ul>
+                </div>
+            </div>
+    </section>
+
 </body>
 
 </html>
