feat(alerts): add alerts section with cards, styles and icons

--- a/index.html
+++ b/index.html
@@ -131,8 +131,6 @@
             </div>
     </section>
 
-
-
     <section class="male">
         <div class="male__content">
             <h2 class="male__title">Prevenção Masculina</h2>
@@ -192,6 +190,57 @@
             </div>
     </section>
 
-</body>
+    <section class="alerts">
+        <div class="alerts__content">
+            <h2 class="alerts__title">Alertas Importantes</h2>
 
+            <div class="alerts__cards">
+
+                <div class="alerts__card alerts__card--pink">
+                    <div class="alerts__card-header">
+                        <img src="./images/icons/iconCoração.png" alt="" class="alerts__card-icon">
+                        <h3 class="alerts__card-title">Autoexame das Mamas</h3>
+                    </div>
+                    <p class="alerts__card-text">
+                        Realize o autoexame das mamas todo mês, entre o 7º e 10º dia após o início da menstruação.
+                        Para mulheres na menopausa, escolha um dia fixo.
+                    </p>
+                </div>
+
+                <div class="alerts__card alerts__card--blue">
+                    <div class="alerts__card-header">
+                        <img src="./images/icons/iconEscudo.png" alt="" class="alerts__card-icon">
+                        <h3 class="alerts__card-title">Autoexame dos Testículos</h3>
+                    </div>
+                    <p class="alerts__card-text">
+                        Homens e pessoas com testículos devem realizar o autoexame mensalmente, de preferência
+                        após o banho, para identificar alterações como nódulos ou inchaços.
+                    </p>
+                </div>
+
+                <div class="alerts__card alerts__card--green">
+                    <div class="alerts__card-header">
+                        <img src="./images/icons/iconVacina.png" alt="" class="alerts__card-icon">
+                        <h3 class="alerts__card-title">Vacinas em Dia</h3>
+                    </div>
+                    <p class="alerts__card-text">Todos devem manter a carteira de vacinação atualizada. Algumas vacinas
+                        precisam de reforço na idade adulta, como tétano, difteria e hepatite B.
+                    </p>
+                </div>
+
+                <div class="alerts__card alerts__card--orange">
+                    <div class="alerts__card-header">
+                        <img src="./images/icons/iconCerebro.png" alt="" class="alerts__card-icon">
+                        <h3 class="alerts__card-title">Saúde Mental</h3>
+                    </div>
+                    <p class="alerts__card-text">Cuidar da mente é tão importante quanto do corpo. Reserve momentos para
+                        relaxar, dormir bem e buscar apoio se sentir necessidade.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+</body>
 </html>
