feat(footer): add footer section with columns, links and contact info

--- a/index.html
+++ b/index.html
@@ -241,6 +241,43 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
 
+        <div class="footer__top">
+            <div class="footer__col">
+                <img src="./images/logo-viva-bem.png" alt="" class="footer__logo">
+
+                <p class="footer__phrase footer__phrase--main">"Prevenção é cuidado com você"</p>
+                <p class="footer__phrase footer__phrase--sub">
+                    Conectando pessoas através da sustentabilidade e tecnologia.
+                </p>
+            </div>
+
+            <div class="footer__col">
+                <h3 class="footer__title">Links Úteis</h3>
+                <a href="https://www.gov.br/saude/pt-br" class="footer__link" target="_blank" rel="noopener noreferrer">Ministério da Saúde</a>
+                <a href="https://www.gov.br/inca/pt-br" class="footer__link" target="_blank" rel="noopener noreferrer">INCA - Instituto Nacional do Câncer</a>
+                <a href="https://www.gov.br/saude/pt-br/sus" class="footer__link" target="_blank" rel="noopener noreferrer">SUS - Sistema Único de Saúde</a>
+            </div>
+
+            <div class="footer__col">
+                <h3 class="footer__title">Contato e Apoio</h3>
+                <p class="footer__text">Disque Saúde: 136</p>
+                <p class="footer__text">sac@saude.gov.br</p>
+                <p class="footer__text footer__text--last">
+                    Em caso de emergência, procure imediatamente uma unidade de saúde<br>
+                    ou ligue para o SAMU: 192
+                </p>
+            </div>
+        </div>
+
+        <div class="footer__divider"></div>
+        <div class="footer__bottom">
+            © 2025 Agenda de Saúde Preventiva.
+            Informações baseadas em diretrizes médicas nacionais e internacionais.
+        </div>
+
+    </footer>
 </body>
+
 </html>
