feat(responsive): add media queries for all sections

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             <nav class="header__nav">
                 <ul class="header__nav-list">
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Prevenção Masculina</a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link">Prevenção Feminina</a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link masculina"><span>Prevenção Masculina</span></a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link feminina"><span>Prevenção Feminina</span></a></li>
                 </ul>
             </nav>
         </div>
