feat(html): add alt attributes to images

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             </div>
             <nav class="header__nav">
                 <ul class="header__nav-list">
-                    <li class="header__nav-item"><a href="#" class="header__nav-link masculina"><span>Prevenção Masculina</span></a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link feminina"><span>Prevenção Feminina</span></a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link masculina"><span>Prevenção
+                                Masculina</span></a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link feminina"><span>Prevenção
+                                Feminina</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -69,7 +71,7 @@
 
             <div class="female__cards">
                 <div class="female__card">
-                    <img src="./images/female/imagemVacina.png" alt="" class="female__icon">
+                    <img src="./images/female/imagemVacina.png" alt="Imagem vacina" class="female__icon">
                     <h3 class="female__card-title">A partir dos 15 anos</h3>
                     <ul class="female__list">
                         <li>Vacinação em dia (HPV, tétano, hepatite B, influenza, covid)</li>
@@ -79,7 +81,7 @@
                 </div>
 
                 <div class="female__card">
-                    <img src="./images/female/imagemExameDeSangue.png" alt="" class="female__icon">
+                    <img src="./images/female/imagemExameDeSangue.png" alt="Exame de Sangue" class="female__icon">
                     <h3 class="female__card-title">A partir dos 20 anos</h3>
                     <ul class="female__list">
                         <li>Exames de sangue e urina anuais (hemograma, glicose, colesterol, função renal e hepática)
@@ -90,7 +92,7 @@
                 </div>
 
                 <div class="female__card">
-                    <img src="./images/female/imagemExameHPV.png" alt="" class="female__icon">
+                    <img src="./images/female/imagemExameHPV.png" alt="Exame HPV" class="female__icon">
                     <h3 class="female__card-title">A partir dos 25 anos</h3>
                     <ul class="female__list">
                         <li>Papanicolau (preventivo) – a cada 3 anos se não houver alterações</li>
@@ -99,7 +101,8 @@
                 </div>
 
                 <div class="female__card">
-                    <img src="./images/female/imagemExameCardiovascular.png" alt="" class="female__icon">
+                    <img src="./images/female/imagemExameCardiovascular.png" alt="Exame cardiovascular"
+                        class="female__icon">
                     <h3 class="female__card-title">A partir dos 30 anos</h3>
                     <ul class="female__list">
                         <li>Check-up anual com clínico geral</li>
@@ -110,7 +113,7 @@
                 </div>
 
                 <div class="female__card">
-                    <img src="./images/female/imagemMamografia.png" alt="" class="female__icon">
+                    <img src="./images/female/imagemMamografia.png" alt="Mamografia" class="female__icon">
                     <h3 class="female__card-title">A partir dos 40 anos</h3>
                     <ul class="female__list">
                         <li>Mamografia anual ou bianual (dependendo do histórico familiar)</li>
@@ -120,7 +123,7 @@
                 </div>
 
                 <div class="female__card">
-                    <img src="./images/female/imagemColonoscopia.png" alt="" class="female__icon">
+                    <img src="./images/female/imagemColonoscopia.png" alt="Colonoscopia" class="female__icon">
                     <h3 class="female__card-title">A partir dos 50 anos</h3>
                     <ul class="female__list">
                         <li>Colonoscopia (a cada 5 anos, ou antes se houver risco)</li>
@@ -137,7 +140,7 @@
 
             <div class="male__cards">
                 <div class="male__card">
-                    <img src="./images/male/imagemVacina.png" alt="" class="male__icon">
+                    <img src="./images/male/imagemVacina.png" alt="Imagem Vacina" class="male__icon">
                     <h3 class="male__card-title">A partir dos 15 anos</h3>
                     <ul class="male__list">
                         <li>Autoexame testicular (mensal, após o banho)</li>
@@ -147,7 +150,7 @@
                 </div>
 
                 <div class="male__card">
-                    <img src="./images/male/imagemExameOftamo.png" alt="" class="male__icon">
+                    <img src="./images/male/imagemExameOftamo.png" alt="Exame oftalmológico" class="male__icon">
                     <h3 class="male__card-title">A partir dos 20 anos</h3>
                     <ul class="male__list">
                         <li>Exames de sangue e urina</li>
@@ -156,7 +159,8 @@
                 </div>
 
                 <div class="male__card">
-                    <img src="./images/male/imagemExameCardiovascular.png" alt="" class="male__icon">
+                    <img src="./images/male/imagemExameCardiovascular.png" alt="Exame Cardiovascular"
+                        class="male__icon">
                     <h3 class="male__card-title">A partir dos 30 anos</h3>
                     <ul class="male__list">
                         <li>Check-up anual com clínico geral</li>
@@ -169,7 +173,7 @@
                 </div>
 
                 <div class="male__card">
-                    <img src="./images/male/imagemExameDeSangue.png" alt="" class="male__icon">
+                    <img src="./images/male/imagemExameDeSangue.png" alt="Exame de Sangue" class="male__icon">
                     <h3 class="male__card-title">A partir dos 40 anos</h3>
                     <ul class="male__list">
                         <li>Exames cardiovasculares</li>
@@ -179,7 +183,7 @@
                 </div>
 
                 <div class="male__card">
-                    <img src="./images/male/imagemConsulta.png" alt="" class="male__icon">
+                    <img src="./images/male/imagemConsulta.png" alt="Consulta medica" class="male__icon">
                     <h3 class="male__card-title">A partir dos 50 anos</h3>
                     <ul class="male__list">
                         <li>Colonoscopia (a cada 5 anos)</li>
@@ -198,7 +202,7 @@
 
                 <div class="alerts__card alerts__card--pink">
                     <div class="alerts__card-header">
-                        <img src="./images/icons/iconCoração.png" alt="" class="alerts__card-icon">
+                        <img src="./images/icons/iconCoração.png" alt="icone coração" class="alerts__card-icon">
                         <h3 class="alerts__card-title">Autoexame das Mamas</h3>
                     </div>
                     <p class="alerts__card-text">
@@ -209,7 +213,7 @@
 
                 <div class="alerts__card alerts__card--blue">
                     <div class="alerts__card-header">
-                        <img src="./images/icons/iconEscudo.png" alt="" class="alerts__card-icon">
+                        <img src="./images/icons/iconEscudo.png" alt="icone escudo" class="alerts__card-icon">
                         <h3 class="alerts__card-title">Autoexame dos Testículos</h3>
                     </div>
                     <p class="alerts__card-text">
@@ -220,7 +224,7 @@
 
                 <div class="alerts__card alerts__card--green">
                     <div class="alerts__card-header">
-                        <img src="./images/icons/iconVacina.png" alt="" class="alerts__card-icon">
+                        <img src="./images/icons/iconVacina.png" alt="icone de vacina" class="alerts__card-icon">
                         <h3 class="alerts__card-title">Vacinas em Dia</h3>
                     </div>
                     <p class="alerts__card-text">Todos devem manter a carteira de vacinação atualizada. Algumas vacinas
@@ -230,7 +234,7 @@
 
                 <div class="alerts__card alerts__card--orange">
                     <div class="alerts__card-header">
-                        <img src="./images/icons/iconCerebro.png" alt="" class="alerts__card-icon">
+                        <img src="./images/icons/iconCerebro.png" alt="Icone Cerebro" class="alerts__card-icon">
                         <h3 class="alerts__card-title">Saúde Mental</h3>
                     </div>
                     <p class="alerts__card-text">Cuidar da mente é tão importante quanto do corpo. Reserve momentos para
@@ -245,7 +249,7 @@
 
         <div class="footer__top">
             <div class="footer__col">
-                <img src="./images/logo-viva-bem.png" alt="" class="footer__logo">
+                <img src="./images/logo-viva-bem.png" alt="Logo Viva Bem" class="footer__logo">
 
                 <p class="footer__phrase footer__phrase--main">"Prevenção é cuidado com você"</p>
                 <p class="footer__phrase footer__phrase--sub">
@@ -255,9 +259,12 @@
 
             <div class="footer__col">
                 <h3 class="footer__title">Links Úteis</h3>
-                <a href="https://www.gov.br/saude/pt-br" class="footer__link" target="_blank" rel="noopener noreferrer">Ministério da Saúde</a>
-                <a href="https://www.gov.br/inca/pt-br" class="footer__link" target="_blank" rel="noopener noreferrer">INCA - Instituto Nacional do Câncer</a>
-                <a href="https://www.gov.br/saude/pt-br/sus" class="footer__link" target="_blank" rel="noopener noreferrer">SUS - Sistema Único de Saúde</a>
+                <a href="https://www.gov.br/saude/pt-br" class="footer__link" target="_blank"
+                    rel="noopener noreferrer">Ministério da Saúde</a>
+                <a href="https://www.gov.br/inca/pt-br" class="footer__link" target="_blank"
+                    rel="noopener noreferrer">INCA - Instituto Nacional do Câncer</a>
+                <a href="https://www.gov.br/saude/pt-br/sus" class="footer__link" target="_blank"
+                    rel="noopener noreferrer">SUS - Sistema Único de Saúde</a>
             </div>
 
             <div class="footer__col">
