feat(nav): add anchor links for page sections

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <nav class="header__nav">
                 <ul class="header__nav-list">
-                    <li class="header__nav-item"><a href="#" class="header__nav-link masculina"><span>Prevenção
+                    <li class="header__nav-item"><a href="#prev-masc" class="header__nav-link masculina"><span>Prevenção
                                 Masculina</span></a></li>
-                    <li class="header__nav-item"><a href="#" class="header__nav-link feminina"><span>Prevenção
+                    <li class="header__nav-item"><a href="#prev-fem" class="header__nav-link feminina"><span>Prevenção
                                 Feminina</span></a></li>
                 </ul>
             </nav>
@@ -65,7 +65,7 @@
         </div>
     </section>
 
-    <section class="female">
+    <section id="prev-fem" class="female">
         <div class="female__content">
             <h2 class="female__title">Prevenção Feminina</h2>
 
@@ -134,7 +134,7 @@
             </div>
     </section>
 
-    <section class="male">
+    <section id="prev-masc" class="male">
         <div class="male__content">
             <h2 class="male__title">Prevenção Masculina</h2>
 
